# ChangeLog for sys-kernel/calculate-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-sources-3.0.7 (19 Oct 2011)

  19 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-sources-3.0.7.ebuild:
  Version bump

*calculate-sources-3.0.4-r3 (04 Oct 2011)

  04 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-sources-3.0.4-r3.ebuild:
  Update ebuild for getting hardend patch by USE

  31 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-sources-3.0.4.ebuild:
  Update eclass for kernel compiling

*calculate-sources-3.0.4 (30 Aug 2011)

  30 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-sources-3.0.4.ebuild:
  Version bump.

*calculate-sources-2.6.39.4-r1 (12 Aug 2011)

  12 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +calculate-sources-2.6.39.4-r1.ebuild:
  Update calculate-sources-2.6.39.4-r1 with fix IA32 support (IssueID #344).

*calculate-sources-2.6.39.4 (09 Aug 2011)

  09 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-sources-2.6.39.3.ebuild, +calculate-sources-2.6.39.4.ebuild:
  version bump

*calculate-sources-2.6.39.3 (29 Jul 2011)

  29 Jul 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-sources-2.6.39.2.ebuild, +calculate-sources-2.6.39.3.ebuild:
  Version bump.

*calculate-sources-2.6.39.2 (24 Jun 2011)

  24 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-sources-2.6.39.2.ebuild:
  Version bump

*calculate-sources-2.6.38.8 (14 Jun 2011)

  14 Jun 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-sources-2.6.38.6.ebuild, +calculate-sources-2.6.38.8.ebuild:
  Version bump

*calculate-sources-2.6.38.6 (10 May 2011)

  10 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-sources-2.6.38.4.ebuild, -calculate-sources-2.6.38.5.ebuild,
  +calculate-sources-2.6.38.6.ebuild:
  Version bump
