@@ -24,7 +24,6 @@ DIST deblob-check-2.6.35 269127 RMD160 2143e3f0fc362d90b00f5f05cdd6dac811f352d0 
 DIST deblob-check-2.6.36 285794 RMD160 2e3232ec9cbbb4874e90a4995372e2f10c0036e1 SHA1 f06f75e3b96d8bce109aa30ccab491624602795c SHA256 5e6fcb7110da5fb62edb0b85f169090de714cba2aac3cbfafbd84b6a860c8641
 DIST deblob-check-2.6.37 328720 RMD160 6739c283f68b9de253071d757991d41618722cb8 SHA1 65d202793837b916974de3e0d2dfa5312cbfe31e SHA256 113898a885fce63b367ea6b7ddcf1e7c3ae47bac01617c228252a061433b6d32
 DIST deblob-check-2.6.38 345831 RMD160 1caea73e54a21cb1100a4ee8226201ddd8a89985 SHA1 44de3ac14d9a3e94b97553051aff0ebfada45274 SHA256 6f681dbd1c1c44cba2c9902dd77a5a51b2d1cc81567cffc60ba92bd0bdd4ff2f
-DIST hardened-patches-3.0.4-5.extras.tar.bz2 458822 RMD160 e2a609e70a0897a1378da230ee3eda7caae10ab9 SHA1 0e542aeb1d83fc525aeab1588c004d88f0312fbc SHA256 981d2ba33c8282146df3920f8ee133515c3badeec43072c3e8f6f7765eff0de3
 DIST linux-2.6.32.tar.bz2 64424138 RMD160 b93742cbaf8174f2200d2dbef0d47a26c618039c SHA1 410b4fc818023bfef60064e973ff0ab46d3bfb19 SHA256 5099786d80b8407d98a619df00209c2353517f22d804fdd9533b362adcb4504e
 DIST linux-2.6.35.tar.bz2 69305709 RMD160 f5d91abb4fa72fac812578d830b22180d85a0e6f SHA1 4cb1fbfbeedcd658ca37739679c65dfaa136bf4e SHA256 18b2e2c336032e366c942622b77302cb05fc034fb19018f086a4ebc9ed41bfcf
 DIST linux-2.6.36.tar.bz2 70277083 RMD160 d739da505a79e71a1370d36e1373b36be055c123 SHA1 b546ab66458d7d614151d80adbc03b4d28977ae2 SHA256 15a076d1a435a6bf8e92834eba4b390b4ec094ce06d47f89d071ca9e5788ce04
@@ -39,20 +38,17 @@ DIST patch-2.6.36.4.bz2 186814 RMD160 ed06acb39f2e272d388bb04810d0d9626c70fa55 S
 DIST patch-2.6.37.6.bz2 177627 RMD160 a7e15bb0da60e763a20b3d73ec516d3e229b9626 SHA1 1765835d3552d3f626f904fe60e9ee2b9a19b4b9 SHA256 33ca5cd06c715672969c459c21f441d7d6c74cba3304f981a40216e8094337bb
 DIST patch-2.6.38.8.bz2 186457 RMD160 cdac809f383e251197e56ea724bee7c0463aeaa9 SHA1 5fdbab04b6394291816c83d845c3c13762926169 SHA256 9fef9c3ce27e88962367e1bfea3f28844eadf229b56737925921b09b01024dc7
 DIST patch-2.6.39.4.bz2 117313 RMD160 d0a774e23f9da13a501e26d4a7909a4774a2cfb2 SHA1 b89d84d28e0993d32e8b74b18590d2e5992d7942 SHA256 132ba590e92d5c9a1bb0dc0885795a095d48e7db2552f1c9e3c26ce946a70a40
-DIST patch-3.0.4.bz2 96120 RMD160 d7e99a2258a53adaf2ea7b75b92783093dddacf3 SHA1 7946f47608c8fdcb808cd63bf4741d085a8ee40d SHA256 96fcf18ca99ddd760069d03d9e7d61ff3e25b708d9cde42b82b77d4f61f86fb4
-DIST patch-3.0.7.bz2 192449 RMD160 4b67408a77db81cc6c0637d7b5218f6f5fc74953 SHA1 2034432d7c42a088da90cb644e087bf5ca3bec41 SHA256 5f2999c6c6e1d59a6b33e9ef561f43ba4f21790ca72d930d89e2eabcc69f6fd6
+DIST patch-3.0.13.bz2 320102 RMD160 a38f77dceedde0963d24e036f075660d3162a232 SHA1 65d6853d3e48681b87d86debe001551ca41aaf75 SHA256 9cf1362bdf3d16275177fd70e076d355361b234ef6a8be6e044bcc8c09053123
 DIST patch-3.1.2.bz2 100417 RMD160 67b5bf6f128b236b2400f45a892b96bc1d467f6b SHA1 9d9348cb4e1fed7fcf8accdbb921d09b92da136a SHA256 bc6508cc2d275cbf4a20af74d7454d22791e439948c31b8397d265c20dfd6bb6
+DIST patch-3.1.5.bz2 148385 RMD160 0dd7ba28dd215f62234f51ee9933a910bc31452c SHA1 ae0b91c518a30633b55f104a4d3920f7ecf108e0 SHA256 474698393a39b792c02b7269010a8fd90fb38bfe7bd6f7bfc7dc5984afbce6ee
 EBUILD calculate-sources-2.6.32.40.ebuild 749 RMD160 427a3669340a36d19516e4a5eedae61d5f741781 SHA1 42179d3e424a3a515ea43c18b9712fa3e837af7a SHA256 907aa69a4220bf860afe597717a80c694a60e7ae7ea014b7686f0cdf47c88f9b
 EBUILD calculate-sources-2.6.35.9.ebuild 1326 RMD160 86da1c1ce9cbd550dfbea00bd76492ccf7d3f602 SHA1 7c520a1238574ff7bcd642e8104d7ae0b51d9c48 SHA256 5f4f5d5993bef610b84cd3f6e69aabc5a90a5e9dfb1a88c650c25eb3d268c9ac
 EBUILD calculate-sources-2.6.36.4.ebuild 1325 RMD160 ca84789928429048f21834dc50b31cd921bfef72 SHA1 fae947a05ee0e179167a19eec2597475ad4aaff7 SHA256 261e22b1f6000039b006e00eca83a524d4614a6cfb329b35cfa09180cbb086c6
 EBUILD calculate-sources-2.6.37.6.ebuild 1363 RMD160 561f6dba1255bb37fa01773783a317dd7fe5962d SHA1 d81892ab54e7e29816b1803b08f8e55d9481e70e SHA256 78dd68dceacc46140b9b16f11c052cfc757e7105cf7569f11f24a7f18848286b
-EBUILD calculate-sources-2.6.38.8.ebuild 744 RMD160 4d0334c6dd67a0a89aabb809239e79f52c4941cb SHA1 18a81f5fc9d309104dff70d96d46b5cb161c1492 SHA256 e997164cc8fcf5fd474c39cf35e518dea55878e4131a4037248aaf79cae9d3c7
+EBUILD calculate-sources-2.6.38.8.ebuild 746 RMD160 67ca1ff5ab4d3d593ab50efaea3ce4e632cf62f4 SHA1 e84d2ba547440e5546bdbc51fedf310cc68dd8c2 SHA256 eb949421bdbe497318fa3b460591c20dcc76fde4f716da9d794c0e7bf1df126b
 EBUILD calculate-sources-2.6.39.4-r1.ebuild 746 RMD160 67ca1ff5ab4d3d593ab50efaea3ce4e632cf62f4 SHA1 e84d2ba547440e5546bdbc51fedf310cc68dd8c2 SHA256 eb949421bdbe497318fa3b460591c20dcc76fde4f716da9d794c0e7bf1df126b
-EBUILD calculate-sources-2.6.39.4.ebuild 744 RMD160 4d0334c6dd67a0a89aabb809239e79f52c4941cb SHA1 18a81f5fc9d309104dff70d96d46b5cb161c1492 SHA256 e997164cc8fcf5fd474c39cf35e518dea55878e4131a4037248aaf79cae9d3c7
-EBUILD calculate-sources-3.0.4-r1.ebuild 780 RMD160 ed57d18c20396014b8dfed9387403fd6a087e213 SHA1 f02ea4abc04dc0d00ec6defbf21ada08fc365cd7 SHA256 c34d92ae87a0d837d6e2450cc1fb8b5063292e7186305bbbe9ec81f841dd5bee
-EBUILD calculate-sources-3.0.4-r2.ebuild 1100 RMD160 18c12ef1c4c94074d41731a1281a4c3241222dbc SHA1 c880535862cc708ba1e470d316e6932295f140ec SHA256 1ad3eb8e29a871ab6b6f2355da1e160a12026194adf49aadf5f5475606a3dcab
-EBUILD calculate-sources-3.0.4-r3.ebuild 1115 RMD160 9b9e78d8c826ebed7e607afe8d31331e145551d9 SHA1 33ff57d0a5403880b1737b1859e916520d6f1754 SHA256 22e6ab5f8270098e8f4fd1731664f723f0051f61729943430b35d84c1d94ae56
-EBUILD calculate-sources-3.0.7.ebuild 1138 RMD160 14af601db7019bf59b0fab401cdd43e60ef9a4ae SHA1 33b114d48b33b574c2d5cbe9a1c0d6ddd0252fe1 SHA256 7bf1cb97209c9fa67f12123ce3aa8e46c0f017d88e5e372ef0160c468c1707c0
+EBUILD calculate-sources-3.0.13.ebuild 1140 RMD160 400d8cded084a331e29abad1ef4d5bc3ab47454e SHA1 88fb06785aa4c14a3de3b329d66a4a28e6341f94 SHA256 e3add623e30f01c9cfd2d1d174a76642bb884fd21bfe9f9c64b28fd6b1652f90
 EBUILD calculate-sources-3.1.2.ebuild 1138 RMD160 14af601db7019bf59b0fab401cdd43e60ef9a4ae SHA1 33b114d48b33b574c2d5cbe9a1c0d6ddd0252fe1 SHA256 7bf1cb97209c9fa67f12123ce3aa8e46c0f017d88e5e372ef0160c468c1707c0
-MISC ChangeLog 7970 RMD160 7162e3d90fdc76bf0b20011b4dc3bd47bf026267 SHA1 4b1c265936a3327bfb5e75a91bc74eb7e55f6ce8 SHA256 ae20cec307b99f67e797983bab708141b5d81287b7f2d194298dbe10163b2c8f
+EBUILD calculate-sources-3.1.5.ebuild 1140 RMD160 400d8cded084a331e29abad1ef4d5bc3ab47454e SHA1 88fb06785aa4c14a3de3b329d66a4a28e6341f94 SHA256 e3add623e30f01c9cfd2d1d174a76642bb884fd21bfe9f9c64b28fd6b1652f90
+MISC ChangeLog 8418 RMD160 ec81c3824eb973800ce2f0755f9f0ca67df910b3 SHA1 aea337d51be5be4a6366acb62d80c907e8d204a3 SHA256 6ca8fb04f58294f0fe8d037946a694ce7643e130a77f367d8ef6234ff58f8d18
 MISC metadata.xml 602 RMD160 7ee32e8200b5e17bc717c6aac420bd7902692344 SHA1 da2c0d41e14c0038639c9bd8f59a0b094cb9ae49 SHA256 2b222337597cf63fdd23baa8e278b8c62e4ee2e6d65e92dd52253a857e48913d
