@@ -2,6 +2,16 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-sources-3.1.5 (11 Dec 2011)
+*calculate-sources-3.0.13 (11 Dec 2011)
+
+  11 Dec 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  calculate-sources-2.6.38.8.ebuild, -calculate-sources-2.6.39.4.ebuild,
+  -calculate-sources-3.0.4-r1.ebuild, -calculate-sources-3.0.4-r2.ebuild,
+  -calculate-sources-3.0.4-r3.ebuild, -calculate-sources-3.0.7.ebuild,
+  +calculate-sources-3.0.13.ebuild, +calculate-sources-3.1.5.ebuild:
+  version bump
+
 *calculate-sources-3.0.7 (19 Oct 2011)
 
   19 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
